Updated the link to the documentation.

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <div class="space-grid-col cover">
         <div class="space-grid-row action-btns">
           <a target="_blank" href="https://github.com/lukaszmakuch/endpoint-imposter" class="action-btn">Source code</a>
-          <a target="_blank" href="/doc.html" class="action-btn">Documentation</a>
+          <a target="_blank" href="doc.html" class="action-btn">Documentation</a>
         </div>
       </div>
 
