--- a/doc.html
+++ b/doc.html
@@ -8,7 +8,7 @@
   <title>Endpoint Imposter</title>
 
   <!-- Flatdoc -->
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src='https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/legacy.js'></script>
   <script src='https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/flatdoc.js'></script>
 
@@ -187,8 +187,8 @@ It takes an [Express Request object](https://expressjs.com/en/4x/api.html#req) a
       </ul>
     </div>
     <div class='right'>
-      <!-- GitHub buttons: see http://ghbtns.com -->
-      <iframe src="http://ghbtns.com/github-btn.html?user=lukaszmakuch&amp;repo=endpoint-imposter&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
+      <!-- GitHub buttons: see https://ghbtns.com -->
+      <iframe src="https://ghbtns.com/github-btn.html?user=lukaszmakuch&amp;repo=endpoint-imposter&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
     </div>
   </div>
 
