Updated the slogan.

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <div class="container space-grid-col">
       <div class="space-grid-col header-container">
         <h1 class="main-header">Endpoint Imposter</h1>
-        <h2 class="slogan">A mocking tool advanced enough to quickly test a ToDo app. Finally.</h2>
+        <h2 class="slogan">Advanced enough to mock a ToDo app. Simpler than a ToDo app.</h2>
       </div>
 
       <div class="space-grid-col cover">
