Added a missing tag.

--- a/index.html
+++ b/index.html
@@ -371,11 +371,9 @@
                 The way you build mocks is the same regardless if you're testing just a small function or the whole application.
               </p>
             </div>
-
           </div>
 
           <div class="space-grid-col sections">
-
             <div class="space-grid-row sections">
 
               <div class="space-grid-col section">
@@ -393,6 +391,7 @@
               </div>
 
             </div>
+          </div>
 
         </div>
       </div>
