Mentioned the blog post in the documentation.

--- a/doc.html
+++ b/doc.html
@@ -44,6 +44,13 @@
   </script>
   <script id="doc" type="text/markdown" src="index.html">
 
+Resources
+---------------
+
+Blog posts:
+
+- 🖋 [What a decent API mocking tool looks like to me](https://lukaszmakuch.pl/post/decent-api-mocking-tool)
+
 Setup
 ---------------
 
