Mentioned start-endpoint-imposter in the docs

--- a/doc.html
+++ b/doc.html
@@ -47,9 +47,13 @@
 Resources
 ---------------
 
-Blog posts:
+### Blog posts
 
 - 🖋 [What a decent API mocking tool looks like to me](https://lukaszmakuch.pl/post/decent-api-mocking-tool)
+
+### Tools
+
+- ✅ [start-endpoint-imposter](https://github.com/lukaszmakuch/start-endpoint-imposter) - a Node.js utility to start Endpoint Imposter
 
 Setup
 ---------------
